# cocotb-v2-migration-helper

./: DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
examples/expected/: legacy_expected.py
examples/legacy/: legacy_input.py
src/cocotb_migrate/: cli.py  diagnostics.py  engine.py
src/cocotb_migrate/rules/: __init__.py  coroutine_detector.py  fork_to_start_soon.py  handle_id_to_getitem.py  testfailure_to_assert.py
src/cocotb_v2_migration_helper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_rules.py
