[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cocotb-v2-migration-helper"
version = "0.1.0"
description = "Prototype migration helper for cocotb 2.x"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "libcst>=1.4.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
cocotb-migrate = "cocotb_migrate.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]